# mapping-party-tracker

./: .env.example  .gitignore  Claude-Readme.md  README.md  database.py  geojson_utils.py  main.py  pyproject.toml  ws_manager.py
mpt/: __init__.py  auth.py  main.py
mpt/static/css/: map.css
mpt/static/js/: edit.js  map.js
mpt/templates/: edit.html  index.html
static/css/: main.css
static/js/: edit.js  main.js
templates/: map.html
tool/: README.md  osm_to_json_polygons.py
