[project]
name = "mapping-party-tracker"
version = "0.1.0"
description = "Collaborative map polygon claiming and scoring tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "mysql-connector-python>=8.4.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
]

[project.scripts]
mapping-party-tracker = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "main.py",
    "database.py",
    "auth.py",
    "geojson_utils.py",
    "ws_manager.py",
    "templates/**",
    "static/**",
]
